Fix spacing and markdown of post excerpts

--- a/_sass/partials/_post.scss
+++ b/_sass/partials/_post.scss
@@ -12,6 +12,7 @@
 
     font-size: $Font-Size-H2;
     font-weight: 300;
+    line-height: $Font-Size-H2;
 
     a {
         color: $Color-Black;
